fix alignment and coloring of site-description

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -78,6 +78,11 @@ header {
   width: 100%;
 }
 
+.site-description {
+  color: white;
+  padding: 15px;
+}
+
 .top-section-wrap {
   width: 100%;
 }
